# web-agent

./: .gitignore  LICENSE  README.md  logger.py  main.py  pyproject.toml
logger/: logger.py
src/agents/: base.py  task_separator.py
src/clients/: base.py  groq.py
src/logger/: logger.py
src/tool_calls/: web_tools.py
src/utils/: tool_calls.py
tool_calls/: web_tools.py
